@@ -61,6 +61,8 @@ public:
 
     static void clearOpener(WebKitWebFrame*);
 
+    static JSValueRef shadowRoot(JSContextRef, JSValueRef);
+
     // FIXME: Move these to webkitwebframe.h once their API has been discussed.
     static GSList* getFrameChildren(WebKitWebFrame*);
     static WTF::CString getInnerText(WebKitWebFrame*);
